chore: put html as a main file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="global.style.css" />
+        <link rel="stylesheet" href="./src/global.style.css" />
 
         <script src="https://unpkg.com/scrollreveal"></script>
 
@@ -17,7 +17,7 @@
                 <div class="nav-logo-header">
                     <div class="logo" id="top">
                         <img
-                            src="./assets/img/logo.svg"
+                            src="./src/assets/img/logo.svg"
                             alt="Logomarca barbearia alura"
                             class="logo"
                         />
@@ -97,21 +97,21 @@
                     </div>
                     <div class="cards">
                         <div class="beard">
-                            <img src="./assets/img/beard.svg" alt="" />
+                            <img src="./src/assets/img/beard.svg" alt="" />
                             <p>
                                 Refatorar barba e bigóde deixando aquela
                                 funcionalidade da cara de mal bem clean.
                             </p>
                         </div>
                         <div class="beard-and-hair">
-                            <img src="./assets/img/beard-hair.svg" alt="" />
+                            <img src="./src/assets/img/beard-hair.svg" alt="" />
                             <p>
                                 Estilo no cabelo e barba usando a ultima
                                 tendência em classes para ser bem identificado.
                             </p>
                         </div>
                         <div class="hair">
-                            <img src="./assets/img/hair.svg" alt="" />
+                            <img src="./src/assets/img/hair.svg" alt="" />
                             <p>
                                 Commitar só o cabelo sem alteração no codigo
                                 gnêtico origial, evitando imutabilidade.
@@ -207,12 +207,12 @@
         </main>
         <footer>
             <div class="container">
-                <img src="./assets/img/logo.svg" alt="" />
+                <img src="./src/assets/img/logo.svg" alt="" />
                 <p>
                     Um projeto do programa Desenvolve 3 Edição - Grupo Boticário
                 </p>
             </div>
         </footer>
-        <script src="./js/scrollReveal.js"></script>
+        <script src="./src/js/scrollReveal.js"></script>
     </body>
 </html>
