chore: document todo list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <title>Barbearia Alura</title>
+        <!--TODO: Introduce namespace css
+            TODO: Introduce BEM css
+            TODO: Organize Folders by pattern
+            TODO: Validity all form
+            TODO: Submit form datas 
+        -->
     </head>
     <body>
         <header>
@@ -240,6 +246,6 @@
             </div>
         </footer>
         <script src="./src/js/scrollReveal.js"></script>
-        <script src="./src/js/validateForm.js"></script>
+        <script src="./src/js/validityForm.js"></script>
     </body>
 </html>
